v2.0.1009  settings page/ input bug on ios/done  91

--- a/src/Components/Buttons/EditableInput/_EditableInput.scss
+++ b/src/Components/Buttons/EditableInput/_EditableInput.scss
@@ -10,3 +10,21 @@
     }
   }
 }
+
+.disabled {
+  display: flex;
+  position: relative;
+  input {
+    flex: 1;
+
+    &:read-only {
+      border: 1px solid var(--errorColor);
+      background-color: var(--grey100);
+      cursor: not-allowed;
+    }
+    &:focus {
+      outline: none;
+      border: 1px solid var(--errorColor) !important;
+    }
+  }
+}
